--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-boilerplate",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Enter a project description here.",
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
